--- a/.env
+++ b/.env
@@ -4,5 +4,5 @@ GMAIL_SERVICE_NAME = gmail
 GMAIL_SERVICE_HOST = smtp.gmail.com
 GMAIL_SERVICE_SECURE = false
 GMAIL_SERVICE_PORT = 587
-GMAIL_USER_NAME = casillas1998xt@gmail.com
+GMAIL_USER_NAME = casill*****xt@gmail.com
 GMAIL_USER_PASSWORD = srhufycvbuqcteln
